--- a/index.css
+++ b/index.css
@@ -24,19 +24,20 @@ body {
 
 .tile {
   color: currentColor;
-  font-size: 5rem;
+  font-size: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 1.5rem;
 }
 
 .right-border {
-  border-right: 0.2em solid indigo;
+  border-right: 1rem solid indigo;
   border-radius: 0.5%;
 }
 
 .bottom-border {
-  border-bottom: 0.2em solid indigo;
+  border-bottom: 1rem solid indigo;
   border-radius: 0.5%;
 }
 
@@ -47,60 +48,61 @@ body {
 
 .strike-row-1 {
   width: 100%;
-  height: 4px;
-  top: 15%;
+  height: 6px;
+  top: 12%;
 }
 .strike-row-2 {
   width: 100%;
-  height: 4px;
-  top: 48%;
+  height: 6px;
+  top: 44%;
 }
 .strike-row-3 {
   width: 100%;
-  height: 4px;
-  top: 83%;
+  height: 6px;
+  top: 80%;
 }
 .strike-column-1 {
   height: 100%;
-  width: 4px;
-  left: 15%;
+  width: 6px;
+  left: 13%;
 }
 .strike-column-2 {
   height: 100%;
-  width: 4px;
-  left: 48%;
+  width: 6px;
+  left: 47%;
 }
 .strike-column-3 {
   height: 100%;
-  width: 4px;
-  left: 83%;
+  width: 6px;
+  left: 82%;
 }
 .strike-diagonal-1 {
   width: 90%;
-  height: 4px;
-  top: 50%;
+  height: 8px;
+  top: 49%;
   left: 5%;
   transform: skewY(45deg);
 }
 .strike-diagonal-2 {
-  width: 90%;
-  height: 4px;
-  top: 50%;
-  left: 5%;
+  width: 92%;
+  height: 8px;
+  top: 46%;
+  left: 2%;
   transform: skewY(-45deg);
 }
 
-#game-over-area {
+#game-over-box {
   text-align: center;
   border: indigo 8px solid;
-  padding: 50px;
-  width: 50%;
-  margin-top: 50px;
+  padding: 40px;
+  width: 17%;
+  margin-top: 70px;
+  border-radius: 20px;
 }
 
-h2 {
+#game-over-message {
   color: currentColor;
-  font-size: 2em;
+  font-size: 2rem;
   margin-top: 0px;
 }
 
@@ -108,6 +110,7 @@ button {
   background-color: transparent;
   color: currentColor;
   border: currentColor 1px solid;
+  border-radius: 10px;
   padding: 10px;
   font-size: 1.5em;
 }
